# auth_Backend_python

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  STRIPE_SETUP.md  alembic.ini  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/core/: config.py  database.py  logging.py
app/features/: __init__.py
app/features/auth/: __init__.py  dependencies.py  repository.py  routes.py  schemas.py
app/features/chatbot/: routes.py
app/features/files/: README.md  __init__.py  routes.py  schemas.py
app/features/subscription/: routes.py  schemas.py
app/middleware/: error_handler.py  logging.py  rate_limit.py  security.py
app/models/: __init__.py  chat_message.py  subscription.py  user.py
app/services/: background_tasks.py  email_service.py  pollination_service.py  stripe_service.py
app/utils/: decorators.py  file_reader.py  jwt.py  otp.py  password.py
migrations/: __init__.py  env.py
migrations/versions/: add_subscription_tables.py
scripts/: __init__.py  create_test_user.py  test_connection.py
