[tool.pyright]
include = ["app"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "venv",
    "migrations"
]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
pythonVersion = "3.11"
pythonPlatform = "All"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true
skip = ["migrations", "venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auth-backend-python"
version = "1.0.0"
description = "FastAPI Authentication Backend with PostgreSQL"
authors = [{name = "Auth Module", email = "auth@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["fastapi", "authentication", "jwt", "postgresql", "oauth"]
license = {text = "MIT"}
